--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
   <head>
     <title>Page Title</title>
+    <script>
+      document.getElementById("div1").style.display="block";
+    </script>
   </head>
   <body>
 
     <h1>My First Website</h1>
-    <p>My first paragraph.</p>
-
+    <div id="div1"></div>
+    <p>My <em>first</em> paragraph.</p>
+    <button type="button"
+onclick="document.getElementById('div1').style.display='block'">
+Show!</button>
+    <button type="button"
+onclick="document.getElementById('div1').style.display='none'">
+Hide!</button>
   </body>
 </html>
