--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Page Title</title>
-    <script>
-      document.getElementById("div1").style.display="block";
-    </script>
-  </head>
-  <body>
 
-    <h1>My First Website</h1>
-    <div id="div1"></div>
-    <p>My <em>first</em> paragraph.</p>
-    <button type="button"
-onclick="document.getElementById('div1').style.display='block'">
-Show!</button>
-    <button type="button"
-onclick="document.getElementById('div1').style.display='none'">
-Hide!</button>
-  </body>
+<head>
+	<title>Page Title</title>
+	<script>
+		document.getElementById("div1").style.display="block";
+	</script>
+</head>
+
+<body>
+
+	<h1>My First Website</h1>
+	<div id="div1"></div>
+	<p>My <em>first</em> paragraph.</p>
+	<button type="button" onclick="document.getElementById('div1').style.display='block'">Show!</button>
+	<button type="button" onclick="document.getElementById('div1').style.display='none'">Hide!</button>
+  <div id="div2"></div>
+</body>
+
 </html>
