--- a/index.html
+++ b/index.html
@@ -16,6 +16,42 @@
 	<button type="button" onclick="document.getElementById('div1').style.display='block'">Show!</button>
 	<button type="button" onclick="document.getElementById('div1').style.display='none'">Hide!</button>
   <div id="div2"></div>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
+  <p>Whoa</p>
 </body>
 
 </html>
