--- a/index.html
+++ b/index.html
@@ -3,30 +3,25 @@
 
 <head>
 	<title>Page Title</title>
-	<script>
-		document.getElementById("div1").style.display="block";
-	</script>
 </head>
 
 <body>
+  <ul class="nav">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#clients">Clients</a></li>
+    <li><a href="#contacts">Contacts</a></li>
+  </ul>
+<h1>The display Property</h1>
 
-	<h1>My First Website</h1>
-	<div id="div1"></div>
-	<p>My <em>first</em> paragraph.</p>
-	<button type="button" onclick="document.getElementById('div1').style.display='block'">Show!</button>
-	<button type="button" onclick="document.getElementById('div1').style.display='none'">Hide!</button>
-  <div id="div2"></div>
-  <p>Whoa</p>
-  <p>Whoa</p>
-  <p>Whoa</p>
-  <p>Whoa</p>
-  <p>Whoa</p>
-  <p>Whoa</p>
+<h2>display: inline</h2>
+<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat scelerisque elit sit amet consequat. Aliquam erat volutpat. <span class="a">Aliquam</span> <span class="a">venenatis</span> gravida nisl sit amet facilisis. Nullam cursus fermentum velit sed laoreet. </div>
 
-  <!-- Overflow -->
-  <div class="overflow-test"></div>
-  <div class="clear-test"></div>
-  <div class="clear-test-1"></div>
+<h2>display: inline-block</h2>
+<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat scelerisque elit sit amet consequat. Aliquam erat volutpat. <span class="b">Aliquam</span> <span class="b">venenatis</span> gravida nisl sit amet facilisis. Nullam cursus fermentum velit sed laoreet. </div>
+
+<h2>display: block</h2>
+<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat scelerisque elit sit amet consequat. Aliquam erat volutpat. <span class="c">Aliquam</span> <span class="c">venenatis</span> gravida nisl sit amet facilisis. Nullam cursus fermentum velit sed laoreet. </div>
 </body>
 
 </html>
