--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 </div>
 <p>You dont know me.</p>
 <p>Nay Nay</p>
-
+<div id="divAsButton">
+  Button
+  </div>
+    <p id="tooltip">Clicking this button opens up a portal to Narnia.</p>
 </body>
 
 </html>
