--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   Button
   </div>
     <p id="tooltip">Clicking this button opens up a portal to Narnia.</p>
+
+ <p class="p-element">You can use the ::first-line pseudo-element to add a special effect to the first line of a text. Some more text. And even more, and more, and more, and more, and more, and more, and more, and more, and more, and more, and more, and more.</p>
 </body>
 
 </html>
