--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <p id="tooltip">Clicking this button opens up a portal to Narnia.</p>
 
  <p class="p-element">You can use the ::first-line pseudo-element to add a special effect to the first line of a text. Some more text. And even more, and more, and more, and more, and more, and more, and more, and more, and more, and more, and more, and more.</p>
+ <img src="https://img.icons8.com/material/280/2980B9/circled-a.png">
 </body>
 
 </html>
