basic navbar impl

--- a/index.html
+++ b/index.html
@@ -6,22 +6,30 @@
 </head>
 
 <body>
-<div class="old">Woah</div>
-<div>
-  <p>Ummm-hmmm</p>
-  <section>
-    <p>Dayuuum!</p>
-  </section>
-</div>
-<p>You dont know me.</p>
-<p>Nay Nay</p>
-<div id="divAsButton">
-  Button
-  </div>
-    <p id="tooltip">Clicking this button opens up a portal to Narnia.</p>
+	<ul>
+    <li><a href="">Home</a></li>
+    <li><a href="">News</a></li>
+    <li><a href="">Contact</a></li>
+    <li><a href="">About</a></li>
+  </ul>
+	<div class="old">Woah</div>
+	<div>
+		<p>Ummm-hmmm</p>
+		<section>
+			<p>Dayuuum!</p>
+		</section>
+	</div>
+	<p>You dont know me.</p>
+	<p>Nay Nay</p>
+	<div id="divAsButton">
+		Button
+	</div>
+	<p id="tooltip">Clicking this button opens up a portal to Narnia.</p>
 
- <p class="p-element">You can use the ::first-line pseudo-element to add a special effect to the first line of a text. Some more text. And even more, and more, and more, and more, and more, and more, and more, and more, and more, and more, and more, and more.</p>
- <img src="https://img.icons8.com/material/280/2980B9/circled-a.png">
+	<p class="p-element">You can use the ::first-line pseudo-element to add a special effect to the first line of a
+		text. Some more text. And even more, and more, and more, and more, and more, and more, and more, and more, and
+		more, and more, and more, and more.</p>
+	<img src="https://img.icons8.com/material/280/2980B9/circled-a.png">
 </body>
 
 </html>
