--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 <body>
 	<ul>
-    <li><a href="home.asp">Home</a></li>
+    <li class="active"><a href="home.asp">Home</a></li>
     <li><a href="news.asp">News</a></li>
     <li><a href="contact.asp">Contact</a></li>
-    <li><a href="about.asp">About</a></li>
+    <li style="float:right" class="active"><a href="about.asp">About</a></li>
   </ul>
 	<div class="old">Woah</div>
 	<div>
