--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<ul>
+	<!-- <ul>
     <li class="active"><a href="home.asp">Home</a></li>
     <li><a href="news.asp">News</a></li>
     <li><a href="contact.asp">Contact</a></li>
@@ -29,7 +29,15 @@
 	<p class="p-element">You can use the ::first-line pseudo-element to add a special effect to the first line of a
 		text. Some more text. And even more, and more, and more, and more, and more, and more, and more, and more, and
 		more, and more, and more, and more.</p>
-	<img src="https://img.icons8.com/material/280/2980B9/circled-a.png">
+	<img src="https://img.icons8.com/material/280/2980B9/circled-a.png"> -->
+  <div class="dropdown">
+    <span>I am MeSeeks!</span>
+      <div class="dropdown-content">
+        <a href="#">Link1</a>
+        <a href="#">Link1</a>
+        <a href="#">Link2</a>
+      </div>
+  </div>
 </body>
 
 </html>
